Format all checksums with capital letters

--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/checksumModeRemote/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/checksumModeRemote/pom.xml
@@ -56,7 +56,7 @@
         </executions>
         <configuration>
           <checksumMode>remote</checksumMode>
-          <checksumAlgorithm>sha256</checksumAlgorithm>
+          <checksumAlgorithm>SHA-256</checksumAlgorithm>
         </configuration>
       </plugin>
     </plugins>
