Revert IT use local for most tests

--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/remoteRepositoryShouldResolve/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/remoteRepositoryShouldResolve/pom.xml
@@ -54,6 +54,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <checksumMode>local</checksumMode>
+        </configuration>
       </plugin>
     </plugins>
   </build>
