--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/classifierDependencyCheckMustFail/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/classifierDependencyCheckMustFail/pom.xml
@@ -45,6 +45,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
         </configuration>
       </plugin>
     </plugins>
