--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/differentLockfileNameValidateShouldSucceed/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/differentLockfileNameValidateShouldSucceed/pom.xml
@@ -33,6 +33,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
           <lockfileName>different-lockfile-name.json</lockfileName>
         </configuration>
       </plugin>
