--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/orderedLockfile/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/orderedLockfile/pom.xml
@@ -44,6 +44,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
           <includeEnvironment>false</includeEnvironment>
         </configuration>
       </plugin>
