--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/reduceLog4jNotAffected/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/reduceLog4jNotAffected/pom.xml
@@ -55,6 +55,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
           <reduced>true</reduced>
         </configuration>
       </plugin>
