--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/simpleProject/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/simpleProject/pom.xml
@@ -27,6 +27,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
         </configuration>
       </plugin>
     </plugins>
