--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckCorrect/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckCorrect/pom.xml
@@ -33,6 +33,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
         </configuration>
       </plugin>
     </plugins>
