--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckMustWarn/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckMustWarn/pom.xml
@@ -34,6 +34,7 @@
           </execution>
         </executions>
         <configuration>
+          <checksumMode>local</checksumMode>
           <allowValidationFailure>true</allowValidationFailure>
         </configuration>
       </plugin>
