📝 Update Documentation with current version

--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -186,7 +186,7 @@
           <execution>
             <configuration>
               <scripts>
-                <script></script>
+                <script/>
               </scripts>
             </configuration>
           </execution>
