--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -50,6 +50,6 @@ jobs:
 
       - name: Commit changes
         if: steps.check_changes.outputs.changes == 'true'
-        uses: stefanzweifel/git-auto-commit-action@v6.0.1
+        uses: stefanzweifel/git-auto-commit-action@778341af668090896ca464160c2def5d1d1a3eb0 # v6.0.1
         with:
           commit_message: "📝 Update Documentation with current version"
