--- a/.github/workflows/ghasum.yml
+++ b/.github/workflows/ghasum.yml
@@ -35,7 +35,7 @@ jobs:
           mode: update
 
       - name: Commit gha.sum
-        uses: stefanzweifel/git-auto-commit-action@v6.0.1
+        uses: stefanzweifel/git-auto-commit-action@778341af668090896ca464160c2def5d1d1a3eb0 # v6.0.1
         with:
           commit_message: "chore: update ghasum checksums"
           file_pattern: .github/workflows/gha.sum
