--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Verify action checksums
         uses: ./.github/actions/ghasum
 
-      - uses: actions/cache@v4.2.4
+      - uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
           path: /root/.jbang
           key: $-jbang-$
@@ -49,7 +49,7 @@ jobs:
               $-jbang-
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4.7.1
+        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
         with:
           java-version: '17'
           distribution: 'temurin'
