--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -118,13 +118,13 @@ jobs:
         uses: ./.github/actions/ghasum
 
       - name: Setup JDK17
-        uses: actions/setup-java@v4.7.1
+        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
         with:
           java-version: '17'
           distribution: 'temurin'
 
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.11.52
+        uses: chains-project/dirty-waters-action@30bc4ef96e9c59f85efb05affc2992353d65870b # v1.11.52
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
