--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -33,14 +33,14 @@ jobs:
 
       - name: run maven-lockfile
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-        uses: ./
+        uses: chains-project/maven-lockfile@7a05656a5fd15ba8db78d7a8753142ac4117e6e3 # 5.6.1
         with:
           github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
           include-maven-plugins: true
     
       - name: run maven-lockfile (fork/external)
         if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
-        uses: ./
+        uses: chains-project/maven-lockfile@7a05656a5fd15ba8db78d7a8753142ac4117e6e3 # 5.6.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           include-maven-plugins: true
