--- a/.github/workflows/regenerate-lockfile.yml
+++ b/.github/workflows/regenerate-lockfile.yml
@@ -32,6 +32,6 @@ jobs:
         uses: chains-project/maven-lockfile/.github/actions/ghasum@7a05656a5fd15ba8db78d7a8753142ac4117e6e3 # 5.6.1
 
       - name: run maven-lockfile
-        uses: ./
+        uses: chains-project/maven-lockfile@7a05656a5fd15ba8db78d7a8753142ac4117e6e3 # 5.6.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
