--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -89,7 +89,10 @@ jobs:
         run: echo "BRANCH_NAME=release/$NEXT_VERSION" >> $GITHUB_ENV
 
       - name: Set release version
-        run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
+        run: |
+          mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
+          mvn --no-transfer-progress --batch-mode versions:set-property -Dproperty=released.version -DnewVersion=$NEXT_VERSION
+
 
       - name: Generate Readme
         run : mvn generate-resources resources:copy-resources
