--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
   <properties>
     <project.build.outputTimestamp>2025-09-24T13:41:53Z</project.build.outputTimestamp>
     <sigstore.skip>true</sigstore.skip>
+    <released.version>5.7.1</released.version>
   </properties>
   <build>
     <plugins>
