--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -19,6 +19,8 @@ project:
 release:
   github:
     owner: chains-project
+    prerelease:
+      pattern: .*beta.*
     changelog:
       formatted: ALWAYS
       preset: 'gitmoji'
