--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -118,6 +118,9 @@ jobs:
       - name: Print next version
         run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout | sed 's/-SNAPSHOT//'
 
+      - name: Remove beta tags for changelog to be from previous non-beta release
+        run: git tag | grep beta | xargs -n 1 git tag -d
+
       - name: Run JReleaser
         uses: jreleaser/release-action@ad73772277e63d9f2bbf4f24a7bb1300388334d7 # 2.4.3
         with:
