Use immutable releases with jreleaser

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -19,6 +19,7 @@ project:
 release:
   github:
     owner: chains-project
+    immutableRelease: true
     prerelease:
       pattern: .*beta.*
     changelog:
