--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -1,3 +1,5 @@
+name: Smoke Tests
+
 on:
   workflow_dispatch:
   pull_request:
@@ -12,7 +14,7 @@ jobs:
       run:
         working-directory: ${{ env.working-directory }}
     runs-on: ubuntu-latest
-    name: smoke test against different repos
+    name: Smoke Test Against Different Repos
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
