--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/resolvedFieldShouldResolve/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/resolvedFieldShouldResolve/pom.xml
@@ -27,9 +27,9 @@
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>fr.inria.gforge.spoon</groupId>
-      <artifactId>spoon-core</artifactId>
-      <version>10.3.0</version>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
       <groupId>atlassian-bandana</groupId>
@@ -37,6 +37,11 @@
       <version>0.2.0</version>
       <type>jar</type>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.sonatype.sisu</groupId>
+      <artifactId>sisu-inject-bean</artifactId>
+      <version>1.4.2</version>
     </dependency>
   </dependencies>
   <build>
