Use systemPropertyVariables instead of systemProperties

--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -222,10 +222,10 @@
           <!--
                ! currently needed to run integration tests.
               -->
-          <systemProperties>
+          <systemPropertyVariables>
             <maven.version>${maven.version}</maven.version>
             <maven.home>${maven.home}</maven.home>
-          </systemProperties>
+          </systemPropertyVariables>
           <properties>
             <configurationParameters>junit.jupiter.execution.parallel.enabled=true
               junit.jupiter.execution.parallel.mode.default=concurrent
