--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -88,6 +88,7 @@
       <version>6.0.2</version>
       <scope>test</scope>
     </dependency>
+    <!-- Explicit dependency to fix GHSA-rqfh-9r24-8c9r (XXE vulnerability in versions < 3.27.7) -->
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
